--- a/app/assets/stylesheets/expense.scss
+++ b/app/assets/stylesheets/expense.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Expense controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th, td {
+    font-size: 15px;
+    padding: .2em;
+    border-bottom: 1px solid #eee;
+
+    &:last-child {
+      text-align: left;
+    }
+  }
+
+  th {
+    border-top: 2px solid #eee;
+    border-bottom-width: 2px;
+}
