--- a/app/views/expense/show.html.erb
+++ b/app/views/expense/show.html.erb
@@ -26,4 +26,7 @@
   </tr>
 <% end %>                        
 </table>
+<br>
+<input type = "button" value="Export" class ="export_button" onclick="()">
+
 
