--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,5 +1,4 @@
 <h1>Expenses daily report: </h1>
-    
 <table class= "table">                         
   <tr>                          
     <th>Expense ID</th>
@@ -26,4 +25,7 @@
   </tr>
 <% end %>                        
 </table>
+<br>
+<input type = "button" value="Export" class ="export_button" onclick="()">
+    <p><%= @response %></p>
 
