adding export method and routes

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -27,5 +27,4 @@
 </table>
 <br>
 <input type = "button" value="Export" class ="export_button" onclick="()">
-    <p><%= @response %></p>
-
+<td><%= link_to "Export", export_user_path(@user_id) %></td>
